finish filter, css and responsive pending

--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
         <article id="filters">
           <label for="category-selector">Select Category</label>
           <select name="category-selector" id="category-selector">
-            <option value="Select Category" selected disabled style="display: none;">Select Category</option>
+            <option value="Select Category" disabled selected style="display: none;">Select Category</option>
+            <option value="all categories">all categories</option>
           </select>
           <input id="price-input" type="number" placeholder="Price">
           <button id="submit-button">Submit</button>
@@ -168,37 +169,37 @@
           store updates, promotions & more</p>
       </div>
       <div id="bottom-footer" class="footer-part">
-      <div id="footer-links">
-        <ul>
-          <li class="footer-li">
-            <a href="#">
-              Instagram
-            </a>
-          </li>
-          <li class="footer-li">
-            <a href="#">
-              Twitter
-            </a>
-          </li>
-          <li class="footer-li">
-            <a href="#">
-              LinkedIn
-            </a>
-          </li>
-          <li class="footer-li">
-            <a href="#">
-              WhatsApp
-            </a>
-          </li>
-          <li class="footer-li">
-            <a href="#">
-              Pinterest
-            </a>
-          </li>
-        </ul>
+        <div id="footer-links">
+          <ul>
+            <li class="footer-li">
+              <a href="#">
+                Instagram
+              </a>
+            </li>
+            <li class="footer-li">
+              <a href="#">
+                Twitter
+              </a>
+            </li>
+            <li class="footer-li">
+              <a href="#">
+                LinkedIn
+              </a>
+            </li>
+            <li class="footer-li">
+              <a href="#">
+                WhatsApp
+              </a>
+            </li>
+            <li class="footer-li">
+              <a href="#">
+                Pinterest
+              </a>
+            </li>
+          </ul>
+        </div>
+        <p>@2023, made with Love by Moona Studio</p>
       </div>
-      <p>@2023, made with Love by Moona Studio</p>
-    </div>
     </footer>
   </main>
 </body>
