Add fixes from V01 to V02

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <p class="subtitles">100+ Plants</p>
             <p>We want our visitors to be inspire to get their hands dirty</p>
           </div>
-          <div class="glass-box glass-box-header">
+          <div class="glass-box">
             <div class="image-container">
               <img loading="lazy"
                 src="https://res.cloudinary.com/dgrhbsilh/image/upload/v1699354316/Plantique/Top-image_zmrxd9.png"
